<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools">

  <data>
    <import type="android.view.View"/>
    <variable
      name="viewModel"
      type="com.demo.urbandictionary.view.main.MainViewModel" />
  </data>

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.main.MainActivity">



    <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/searchTextField"
      style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginTop="8dp"
      android:hint="@string/hint_search"
      app:endIconMode="clear_text"
      app:layout_constraintEnd_toStartOf="@+id/guideline"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

      <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/termText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@={viewModel.searchTerm}" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.Guideline
      android:id="@+id/guideline"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      app:layout_constraintGuide_begin="238dp" />

    <Button
      android:id="@+id/searchButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginEnd="8dp"
      android:onClick="@{() -> viewModel.resultListUrban()}"
      android:text="@string/button_search"
      app:icon="@drawable/baseline_search_white_24"
      app:layout_constraintBottom_toBottomOf="@+id/searchTextField"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@+id/searchTextField"
      app:layout_constraintTop_toTopOf="@+id/searchTextField" />

    <androidx.constraintlayout.widget.Guideline
      android:id="@+id/guideline2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      app:layout_constraintGuide_begin="75dp" />

    <androidx.constraintlayout.widget.Guideline
      android:id="@+id/guideline3"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      app:layout_constraintGuide_begin="137dp" />

    <ImageButton
      android:id="@+id/thumbsUpButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="32dp"
      android:layout_marginTop="8dp"
      android:onClick="@{() -> viewModel.sortByPopularity(true)}"
      android:tag="@string/tag_order_up"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="@+id/guideline2"
      app:srcCompat="@drawable/baseline_thumb_up_24" />

    <ImageButton
      android:id="@+id/thumbDownButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="30dp"
      android:onClick="@{() -> viewModel.sortByPopularity(false)}"
      android:tag="@string/tag_order_down"
      app:layout_constraintBottom_toBottomOf="@+id/thumbsUpButton"
      app:layout_constraintEnd_toStartOf="@+id/guideline"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toEndOf="@+id/thumbsUpButton"
      app:layout_constraintTop_toTopOf="@+id/thumbsUpButton"
      app:srcCompat="@drawable/baseline_thumb_down_24" />

    <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/definitionRecyclerView"
      android:layout_width="404dp"
      android:layout_height="0dp"
      android:layout_marginTop="8dp"
      app:definitions="@{viewModel.definitionsLiveData}"
      app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <ProgressBar
      android:id="@+id/progressBar"
      style="?android:attr/progressBarStyle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:visibility="@{viewModel.progressLiveData ? View.VISIBLE : View.INVISIBLE }"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  </androidx.constraintlayout.widget.ConstraintLayout>

</layout>